# fluxer

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: CONTRIBUTING.md  labeller.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: _build-image.yaml  build-admin.yaml  build-api.yaml  build-app-proxy-self-hosted.yaml  build-app-proxy.yaml  build-desktop.yaml  build-docs.yaml  build-gateway.yaml  build-gifs.yaml  build-marketing.yaml  build-media-proxy.yaml  build-messages.yaml  build-snowflakes.yaml  build-static.yaml  build-unfurl.yaml  build-users.yaml  dart-sdk-validation.yaml  dart-sdk-validation.yml  deploy-service.yaml  dispatch-dart-sdk-regeneration.yaml  finalise-release.yaml  labeller.yaml  lock-closed-conversations.yaml  pr-template-honeypot.yaml  release-all.yaml  repair-static-asset-metadata.yaml  sync-static-bucket.yaml  tests.yaml  validate.yaml
config/env/: development.env
deploy/helm/gifs/: Chart.yaml  values.prod.yaml  values.yaml
deploy/helm/gifs/templates/: all.yaml
deploy/helm/infra/: values.yaml
deploy/helm/infra/templates/: geoip-sync-cronjob.yaml
deploy/self-hosting/: .env.example  Caddyfile
fluxer_admin/: openapi-admin.json
fluxer_admin/src/api/: messages.rs  users.rs
fluxer_admin/src/api/types/: instance_config.rs
fluxer_admin/src/routes/: admin.rs  message_actions.rs  system_actions.rs  user_actions.rs
fluxer_admin/src/templates/: layout_scripts.rs
fluxer_admin/src/templates/components/: message_list.rs
fluxer_admin/src/templates/pages/: admin_api_keys.rs  instance_config.rs
fluxer_admin/tests/: htmx_acceptance.rs
fluxer_api/: package.json
fluxer_api/pkgs/cache/: package.json
fluxer_api/pkgs/cast_client/: package.json  tsconfig.json
fluxer_api/pkgs/cast_client/src/: CastClient.ts
fluxer_api/pkgs/rate_limit/src/: RateLimitService.ts
fluxer_api/src/api/: App.ts  Config.ts  Tables.ts
fluxer_api/src/api/app/: APILifecycle.ts  ControllerRegistry.ts  MiddlewarePipeline.ts
fluxer_api/src/api/auth/: AuthController.ts  AuthLogin.ts  AuthRequestService.ts  FlutterClientGate.ts
fluxer_app/: package.json
fluxer_app_proxy/src/: csp.rs
fluxer_app_proxy/src/routes/: assets_proxy.rs  spa_index.rs
fluxer_desktop/: electron-builder.config.cjs
fluxer_desktop/src/main/: Window.ts
fluxer_gateway/: rebar.config
fluxer_gateway/src/cache/: clustered_ets_cache.erl
fluxer_gateway/src/gateway/: gateway_handler_resume.erl  gateway_hotpatch_loader.erl  gateway_hotpatch_store.erl  gateway_nats_pool.erl  gateway_rollout_config.erl
fluxer_gateway/src/guild/: guild_common.erl  guild_data_index.erl  guild_data_index_channels.erl  guild_data_index_roles.erl  guild_data_normalize.erl  guild_member_list_oset.erl  guild_member_list_oset_nif.erl  guild_presence_reconcile.erl
fluxer_gateway/src/push/: push_fcm_payload.erl  push_markdown_plaintext.erl  push_markdown_plaintext_nif.erl  push_notification_format.erl
fluxer_gateway/src/session/: session_manager_shard_start.erl  session_ready_collect.erl
fluxer_gateway/src/telemetry/: process_registry.erl
fluxer_gateway/test/: gateway_handler_tests.erl
fluxer_gifs/: Cargo.toml  Dockerfile
fluxer_gifs/src/: klipy.rs  main.rs  media_proxy.rs  router_impl.rs  shard_impl.rs  types.rs
fluxer_media_proxy/: Cargo.toml
fluxer_media_proxy/src/: disposition.rs  lib.rs  output_format.rs  server.rs
fluxer_messages/src/: shard_impl.rs  types.rs
fluxer_svc/src/: router.rs  transport.rs
fluxer_unfurl/: Cargo.toml
fluxer_unfurl/src/: router_impl.rs  shard_impl.rs  types.rs
fluxer_unfurl/src/resolvers/: default_resolver.rs  fxtwitter.rs  klipy.rs  mod.rs
scripts/: apply-dev-patches.sh
tools/ci/src/: app_proxy.rs  ci_workflow.rs  common.rs  desktop.rs  functions.rs  lib.rs  release.rs
tools/dev/src/: dev.rs  manifest.rs
(+234 files in other folders)
