[package]
name = "fluxer-unfurl"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
ammonia = "4.1.2"
anyhow = "1.0.102"
base64 = "0.22.1"
chrono = { version = "0.4.45", default-features = false, features = ["std"] }
entities = "1.0.1"
fluxer-svc = { path = "../fluxer_svc", default-features = false }
hmac = "0.13.0"
infer = "0.19.0"
moka = { version = "0.12.15", features = ["future", "sync"] }
regex = "1.12"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "stream"] }
scraper = "0.27"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
tracing = "0.1.44"
url = "2.5"
urlencoding = "2.1"
